--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,11 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
-    testCompile 'junit:junit:4.12'
     compile 'org.osmdroid:osmdroid-android:5.0.1@aar'
+    compile 'com.google.android.gms:play-services-places:10.2.0'
+    compile 'com.google.firebase:firebase-database:10.2.0'
+    testCompile 'junit:junit:4.12'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
