--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-places:10.2.0'
     compile 'com.google.firebase:firebase-database:10.2.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.MKergall:osmbonuspack:6.2'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 
 
