--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,13 @@ dependencies {
     compile 'org.osmdroid:osmdroid-android:5.0.1@aar'
     compile 'com.google.android.gms:play-services-places:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.firebaseui:firebase-ui-database:1.1.1'
     testCompile 'junit:junit:4.12'
     compile 'com.github.MKergall:osmbonuspack:6.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
 }
 
 
